// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispatch PRODUCTS::FETCH_SUCCEEDED 1`] = `
Object {
  "products": Object {
    "all": Object {
      "0-kmg1to7ttda": Object {
        "date": "Tue Oct 24 2017 12:27:17 GMT-0300 (-03)",
        "face": "( .-. )",
        "id": "0-kmg1to7ttda",
        "price": 114,
        "size": 35,
      },
    },
    "hasMore": true,
    "page": 0,
    "sort": "id",
  },
}
`;

exports[`Dispatch PRODUCTS::NO_MORE 1`] = `
Object {
  "products": Object {
    "all": Object {},
    "hasMore": false,
    "page": 0,
    "sort": "id",
  },
}
`;

exports[`Dispatch UNKNOWN ACTION 1`] = `
Object {
  "products": Object {
    "all": Object {},
    "hasMore": true,
    "page": 0,
    "sort": "id",
  },
}
`;
